--- a/index.html
+++ b/index.html
@@ -1,25 +1,26 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" href="s.css">
-    <script src="C:\Users\simra\OneDrive\Desktop\CB_CSS\pb\pb.js" defer></script>
+    <link rel="stylesheet" href="jj.css">
+    <script src="script.js" defer></script>
     <title>Progress Bar</title>
   </head>
   <body style = "background-color: #120e1f; font-family: 'Lato', sans-serif;">
-    <a href="something" class="btn">Button 1</a>
-    <a href="something" class="btn2" style="background-color:#4c1e3c">Button 2</a>
-    <a href="something" class="btn2" style="background-color:#1a1040">Button 3</a>
-    <a href="something" class="btn2" style="background-color:#3A0061">Button 4</a>
-    <a href="something" class="btn2" style="background-color:#6100AD">Button 3</a>
-        <div class="menu">
-            <div class="label">Follow Us At</div>
-            <div class="spacer"></div>
-            <div class="item"><span>Twitter</span></div>
-            <div class="item"><span>Instagram</span></div>
-            <div class="item"><span>A</span></div>
-            <div class="item"><span>B</span></div>
-            <div class="item"><span>C</span></div>
-          </div>
-    <div class="progress-bar" style="--width: 10" data-label="..."></div>
+    <button onclick="document.getElementById('id01').style.display='block'">Open Modal</button>
+
+<div id="id01" class="modal">
+  <span onclick="document.getElementById('id01').style.display='none'" class="close" title="Close Modal">&times;</span>
+  <form class="modal-content" action="/action_page.php">
+    <div class="container">
+      <h1>MODAL HEADER</h1>
+      <p>Modal text</p>
+
+      <div class="clearfix">
+        <button type="button" class="cancelbtn">Cancel</button>
+        <button type="button" class="deletebtn">Delete</button>
+      </div>
+    </div>
+  </form>
+</div>
   </body>
 </html>
