--- a/index.html
+++ b/index.html
@@ -1,26 +1,23 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <link rel="stylesheet" href="jj.css">
-    <script src="script.js" defer></script>
-    <title>Progress Bar</title>
-  </head>
-  <body style = "background-color: #120e1f; font-family: 'Lato', sans-serif;">
-    <button onclick="document.getElementById('id01').style.display='block'">Open Modal</button>
-
-<div id="id01" class="modal">
-  <span onclick="document.getElementById('id01').style.display='none'" class="close" title="Close Modal">&times;</span>
-  <form class="modal-content" action="/action_page.php">
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css" class="">
+    <title>Document</title>
+</head>
+<body>
     <div class="container">
-      <h1>MODAL HEADER</h1>
-      <p>Modal text</p>
-
-      <div class="clearfix">
-        <button type="button" class="cancelbtn">Cancel</button>
-        <button type="button" class="deletebtn">Delete</button>
+        <img src="https://source.unsplash.com/1300x1200/?algeria">
+        <img src="https://source.unsplash.com/1300x1200/?lebanon">
+        <img src="https://source.unsplash.com/1300x1200/?qatar">
+        <img src="https://source.unsplash.com/1300x1200/?uae">
+        <img src="https://source.unsplash.com/1300x1200/?kuwait">
+        <img src="https://source.unsplash.com/1300x1200/?oman">
+        <img src="https://source.unsplash.com/1300x1200/?turkey">
+        <img src="https://source.unsplash.com/1300x1200/?iran">
+        <img src="https://source.unsplash.com/1300x1200/?jordan">
+        <img src="https://source.unsplash.com/1300x1200/?Kuwait">
       </div>
-    </div>
-  </form>
-</div>
-  </body>
+</body>
 </html>
