--- a/NavBar.html
+++ b/NavBar.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" href="nn.css">
+    <link rel="stylesheet" href="NavBar.css">
     <title>Progress Bar</title>
   </head>
   <body >
