--- a/Buttons+ProgBar+BottomNavB.html
+++ b/Buttons+ProgBar+BottomNavB.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" href="s.css">
-    <script src="C:\Users\simra\OneDrive\Desktop\CB_CSS\pb\pb.js" defer></script>
+    <link rel="stylesheet" href="Buttons+ProgBar+BottomNavB.css">
     <title>Progress Bar</title>
   </head>
   <body style = "background-color: #120e1f; font-family: 'Lato', sans-serif;">
