--- a/modal.html
+++ b/modal.html
@@ -11,8 +11,8 @@
       <span onclick="document.getElementById('id01').style.display='none'" class="close" title="Close Modal">&times;</span>
       <form class="modal-content" action="/action_page.php">
         <div class="container">
-          <h1>MODAL HEADER</h1>
-          <p>Modal text</p>
+          <h1 style="color:white">MODAL HEADER</h1>
+          <p style="color:white">Modal text</p>
     
           <div class="clearfix">
             <button type="button" class="cancelbtn">Cancel</button>
